cmake_minimum_required(VERSION 3.24)
project(MM32F527X_E9P C)

set(CMAKE_C_STANDARD 11)

include_directories(libraries/components/fatfs/source)
include_directories(libraries/sdk)
include_directories(libraries/sdk/CMSIS)
include_directories(libraries/sdk/CMSIS/Include)
include_directories(libraries/sdk/drivers)
include_directories(libraries/zf_common)
include_directories(libraries/zf_device)
include_directories(libraries/zf_driver)
include_directories(project/user/inc)
include_directories(project/code)

add_executable(MM32F527X_E9P
        libraries/components/fatfs/documents/res/app1.c
        libraries/components/fatfs/documents/res/app2.c
        libraries/components/fatfs/documents/res/app3.c
        libraries/components/fatfs/documents/res/app4.c
        libraries/components/fatfs/documents/res/app5.c
        libraries/components/fatfs/documents/res/app6.c
        libraries/components/fatfs/source/diskio.c
        libraries/components/fatfs/source/diskio.h
        libraries/components/fatfs/source/ff.c
        libraries/components/fatfs/source/ff.h
        libraries/components/fatfs/source/ffconf.h
        libraries/components/fatfs/source/ffsystem.c
        libraries/components/fatfs/source/ffunicode.c
        libraries/sdk/CMSIS/Include/arm_common_tables.h
        libraries/sdk/CMSIS/Include/arm_const_structs.h
        libraries/sdk/CMSIS/Include/arm_math.h
        libraries/sdk/CMSIS/Include/cmsis_armcc.h
        libraries/sdk/CMSIS/Include/cmsis_armclang.h
        libraries/sdk/CMSIS/Include/cmsis_armclang_ltm.h
        libraries/sdk/CMSIS/Include/cmsis_compiler.h
        libraries/sdk/CMSIS/Include/cmsis_gcc.h
        libraries/sdk/CMSIS/Include/cmsis_iccarm.h
        libraries/sdk/CMSIS/Include/cmsis_version.h
        libraries/sdk/CMSIS/Include/core_armv81mml.h
        libraries/sdk/CMSIS/Include/core_armv8mbl.h
        libraries/sdk/CMSIS/Include/core_armv8mml.h
        libraries/sdk/CMSIS/Include/core_cm0.h
        libraries/sdk/CMSIS/Include/core_cm0plus.h
        libraries/sdk/CMSIS/Include/core_cm1.h
        libraries/sdk/CMSIS/Include/core_cm23.h
        libraries/sdk/CMSIS/Include/core_cm3.h
        libraries/sdk/CMSIS/Include/core_cm33.h
        libraries/sdk/CMSIS/Include/core_cm35p.h
        libraries/sdk/CMSIS/Include/core_cm4.h
        libraries/sdk/CMSIS/Include/core_cm7.h
        libraries/sdk/CMSIS/Include/core_dsp.h
        libraries/sdk/CMSIS/Include/core_sc000.h
        libraries/sdk/CMSIS/Include/core_sc300.h
        libraries/sdk/CMSIS/Include/core_star.h
        libraries/sdk/CMSIS/Include/mpu_armv7.h
        libraries/sdk/CMSIS/Include/mpu_armv8.h
        libraries/sdk/CMSIS/Include/tz_context.h
        libraries/sdk/drivers/hal_adc.c
        libraries/sdk/drivers/hal_adc.h
        libraries/sdk/drivers/hal_common.h
        libraries/sdk/drivers/hal_comp.c
        libraries/sdk/drivers/hal_comp.h
        libraries/sdk/drivers/hal_crc.c
        libraries/sdk/drivers/hal_crc.h
        libraries/sdk/drivers/hal_dac.c
        libraries/sdk/drivers/hal_dac.h
        libraries/sdk/drivers/hal_dma.c
        libraries/sdk/drivers/hal_dma.h
        libraries/sdk/drivers/hal_dma_request.h
        libraries/sdk/drivers/hal_exti.c
        libraries/sdk/drivers/hal_exti.h
        libraries/sdk/drivers/hal_flexcan.c
        libraries/sdk/drivers/hal_flexcan.h
        libraries/sdk/drivers/hal_fsmc.c
        libraries/sdk/drivers/hal_fsmc.h
        libraries/sdk/drivers/hal_gpio.c
        libraries/sdk/drivers/hal_gpio.h
        libraries/sdk/drivers/hal_i2c.c
        libraries/sdk/drivers/hal_i2c.h
        libraries/sdk/drivers/hal_i2s.c
        libraries/sdk/drivers/hal_i2s.h
        libraries/sdk/drivers/hal_iwdg.c
        libraries/sdk/drivers/hal_iwdg.h
        libraries/sdk/drivers/hal_lptim.c
        libraries/sdk/drivers/hal_lptim.h
        libraries/sdk/drivers/hal_lpuart.c
        libraries/sdk/drivers/hal_lpuart.h
        libraries/sdk/drivers/hal_mds.c
        libraries/sdk/drivers/hal_mds.h
        libraries/sdk/drivers/hal_mds_remap.h
        libraries/sdk/drivers/hal_power.c
        libraries/sdk/drivers/hal_power.h
        libraries/sdk/drivers/hal_pwr.c
        libraries/sdk/drivers/hal_pwr.h
        libraries/sdk/drivers/hal_qspi.c
        libraries/sdk/drivers/hal_qspi.h
        libraries/sdk/drivers/hal_rcc.c
        libraries/sdk/drivers/hal_rcc.h
        libraries/sdk/drivers/hal_rtc.c
        libraries/sdk/drivers/hal_rtc.h
        libraries/sdk/drivers/hal_spi.c
        libraries/sdk/drivers/hal_spi.h
        libraries/sdk/drivers/hal_syscfg.c
        libraries/sdk/drivers/hal_syscfg.h
        libraries/sdk/drivers/hal_tim.c
        libraries/sdk/drivers/hal_tim.h
        libraries/sdk/drivers/hal_uart.c
        libraries/sdk/drivers/hal_uart.h
        libraries/sdk/drivers/hal_usb.c
        libraries/sdk/drivers/hal_usb.h
        libraries/sdk/drivers/hal_usb_bdt.h
        libraries/sdk/drivers/hal_wwdg.c
        libraries/sdk/drivers/hal_wwdg.h
        libraries/sdk/hal_device_registers.h
        libraries/sdk/mm32f5277e.h
        libraries/sdk/mm32f5277e_features.h
        libraries/sdk/system_mm32f5277e.c
        libraries/sdk/system_mm32f5277e.h
        libraries/zf_common/zf_common_clock.c
        libraries/zf_common/zf_common_clock.h
        libraries/zf_common/zf_common_debug.c
        libraries/zf_common/zf_common_debug.h
        libraries/zf_common/zf_common_fifo.c
        libraries/zf_common/zf_common_fifo.h
        libraries/zf_common/zf_common_font.c
        libraries/zf_common/zf_common_font.h
        libraries/zf_common/zf_common_function.c
        libraries/zf_common/zf_common_function.h
        libraries/zf_common/zf_common_headfile.h
        libraries/zf_common/zf_common_interrupt.c
        libraries/zf_common/zf_common_interrupt.h
        libraries/zf_common/zf_common_typedef.h
        libraries/zf_device/zf_device_absolute_encoder.c
        libraries/zf_device/zf_device_absolute_encoder.h
        libraries/zf_device/zf_device_bluetooth_ch9141.c
        libraries/zf_device/zf_device_bluetooth_ch9141.h
        libraries/zf_device/zf_device_camera.c
        libraries/zf_device/zf_device_camera.h
        libraries/zf_device/zf_device_config.h
        libraries/zf_device/zf_device_gps_tau1201.c
        libraries/zf_device/zf_device_gps_tau1201.h
        libraries/zf_device/zf_device_gt911.c
        libraries/zf_device/zf_device_gt911.h
        libraries/zf_device/zf_device_icm20602.c
        libraries/zf_device/zf_device_icm20602.h
        libraries/zf_device/zf_device_imu660ra.c
        libraries/zf_device/zf_device_imu660ra.h
        libraries/zf_device/zf_device_imu963ra.c
        libraries/zf_device/zf_device_imu963ra.h
        libraries/zf_device/zf_device_ips114.c
        libraries/zf_device/zf_device_ips114.h
        libraries/zf_device/zf_device_ips200.c
        libraries/zf_device/zf_device_ips200.h
        libraries/zf_device/zf_device_ips350.c
        libraries/zf_device/zf_device_ips350.h
        libraries/zf_device/zf_device_is66wv51216.c
        libraries/zf_device/zf_device_is66wv51216.h
        libraries/zf_device/zf_device_k24c02.c
        libraries/zf_device/zf_device_k24c02.h
        libraries/zf_device/zf_device_key.c
        libraries/zf_device/zf_device_key.h
        libraries/zf_device/zf_device_mpu6050.c
        libraries/zf_device/zf_device_mpu6050.h
        libraries/zf_device/zf_device_mt9v03x.c
        libraries/zf_device/zf_device_mt9v03x.h
        libraries/zf_device/zf_device_oled.c
        libraries/zf_device/zf_device_oled.h
        libraries/zf_device/zf_device_ov7725.c
        libraries/zf_device/zf_device_ov7725.h
        libraries/zf_device/zf_device_scc8660.c
        libraries/zf_device/zf_device_scc8660.h
        libraries/zf_device/zf_device_sdcard_spi.c
        libraries/zf_device/zf_device_sdcard_spi.h
        libraries/zf_device/zf_device_tft180.c
        libraries/zf_device/zf_device_tft180.h
        libraries/zf_device/zf_device_type.c
        libraries/zf_device/zf_device_type.h
        libraries/zf_device/zf_device_virtual_oscilloscope.c
        libraries/zf_device/zf_device_virtual_oscilloscope.h
        libraries/zf_device/zf_device_wifi_uart.c
        libraries/zf_device/zf_device_wifi_uart.h
        libraries/zf_device/zf_device_wireless_uart.c
        libraries/zf_device/zf_device_wireless_uart.h
        libraries/zf_driver/zf_driver_adc.c
        libraries/zf_driver/zf_driver_adc.h
        libraries/zf_driver/zf_driver_dac.c
        libraries/zf_driver/zf_driver_dac.h
        libraries/zf_driver/zf_driver_delay.c
        libraries/zf_driver/zf_driver_delay.h
        libraries/zf_driver/zf_driver_dma.c
        libraries/zf_driver/zf_driver_dma.h
        libraries/zf_driver/zf_driver_encoder.c
        libraries/zf_driver/zf_driver_encoder.h
        libraries/zf_driver/zf_driver_exti.c
        libraries/zf_driver/zf_driver_exti.h
        libraries/zf_driver/zf_driver_flash.c
        libraries/zf_driver/zf_driver_flash.h
        libraries/zf_driver/zf_driver_fsmc.c
        libraries/zf_driver/zf_driver_fsmc.h
        libraries/zf_driver/zf_driver_gpio.c
        libraries/zf_driver/zf_driver_gpio.h
        libraries/zf_driver/zf_driver_iic.c
        libraries/zf_driver/zf_driver_iic.h
        libraries/zf_driver/zf_driver_pit.c
        libraries/zf_driver/zf_driver_pit.h
        libraries/zf_driver/zf_driver_pwm.c
        libraries/zf_driver/zf_driver_pwm.h
        libraries/zf_driver/zf_driver_soft_iic.c
        libraries/zf_driver/zf_driver_soft_iic.h
        libraries/zf_driver/zf_driver_soft_spi.c
        libraries/zf_driver/zf_driver_soft_spi.h
        libraries/zf_driver/zf_driver_spi.c
        libraries/zf_driver/zf_driver_spi.h
        libraries/zf_driver/zf_driver_timer.c
        libraries/zf_driver/zf_driver_timer.h
        libraries/zf_driver/zf_driver_uart.c
        libraries/zf_driver/zf_driver_uart.h
        project/user/inc/isr.h
        project/user/src/isr.c
        project/user/src/main.c
        project/code/pid.c
        project/code/pid.h
        project/code/easy_key.c
        project/code/easy_key.h
        project/code/easy_ui.c
        project/code/easy_ui.h
        project/code/header.h project/code/user_ips114.c project/code/user_ips114.h
        project/code/profile_photo_erbws.c project/code/profile_photo_erbws.h project/code/menu.c project/code/menu.h project/code/user_flash.c project/code/user_flash.h)
